--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     <properties>
         <spring.version>3.2.0.RELEASE</spring.version>
         <tomcat.version>7.0.42</tomcat.version>
+        <hibernate.core.version>4.2.4.Final</hibernate.core.version>
+        <java.assist.version>3.18.0-GA</java.assist.version>
+        <mysql.version>5.1.28</mysql.version>
+        <commons.dbcp.version>1.4</commons.dbcp.version>
+        <junit.version>4.8.2</junit.version>
     </properties>
 
     <dependencies>
@@ -62,7 +67,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -70,19 +75,19 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.2.4.Final</version>
+            <version>${hibernate.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.18.0-GA</version>
+            <version>${java.assist.version}</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.26</version>
+            <version>${mysql.version}</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -100,6 +105,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons.dbcp.version}</version>
         </dependency>
 
     </dependencies>
